add permission feature
